Fix black bar on tablet

--- a/css/header.css
+++ b/css/header.css
@@ -50,6 +50,14 @@
 	margin-top: 8px;
 }
 
+@media only screen and (max-width: 1500px) {
+    .title-black-bar {
+    	width: 100%;
+    	border-left: 10px solid white;
+    	border-right: 10px solid white;
+    }
+}
+
 .title-menu > .dropdown.open > a {
 	border-bottom: 5px solid black;
 }
